--- a/qrcode.html
+++ b/qrcode.html
@@ -13,7 +13,7 @@
       max-width: 100%;
     }
 
-    h1 {
+    h1, small {
       font-family: sans-serif;
       text-align: center;
     }
@@ -24,6 +24,7 @@
   <main>
     <h1>Bingo Hacka Kipper</h1>
     <img src="https://i.imgur.com/BhCE9BN.png" alt="">
+    <small>https://maykbrito.github.io/bingo-hacka-kipper/</small>
   </main>
 </body>
 </html>
