add negative margin to card

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             background-color: #f0f0f0;
         }
         .container {
+            margin-top: 4rem;
             text-align: center;
         }
         .board {
