--- a/admin.html
+++ b/admin.html
@@ -47,6 +47,9 @@
       margin-top: auto;
       display: flex;
       flex-wrap: wrap;
+      max-width: 40rem;
+      justify-self: center;
+      justify-content: center;
     }
 
     footer span {
